# API-Indicai

./: pyproject.toml  sentiment_analysis.ipynb
Documentacao/: README.md  link.txt
api_indicai/: alembic.ini  app.py  main.py
api_indicai/adapters/: senhaAdapter.py  senhaInterface.py
api_indicai/alembic/: env.py
api_indicai/commands/: commandInterface.py  commandInvoker.py  usuarioCommands.py
api_indicai/controller/: avaliacaoController.py  avaliacaoCotroller.py  facade.py  usuarioController.py
api_indicai/db/: dependecies.py  dependencies.py  session.py  singletonSession.py
api_indicai/enums/: servico.py  usuarios.py
api_indicai/memento/: usuarioMemento.py
api_indicai/models/: avaliacao.py  avaliacaodb.py  condomino.py  prestador.py  usuario.py  usuariodb.py
api_indicai/observer/: observer.py  userLogger.py
api_indicai/relatorios/: Relatorio.py  RelatorioHTML.py  RelatorioPDF.py
api_indicai/repositories/: avaliacaoRepository.py  usuarioRepositoryFactory.py  usuarioRepositoryInDB.py  usuarioRepositoryInMemory.py  usuarioRepositoryInterface.py
api_indicai/services/: avaliacaoService.py  condominoManager.py  externalPasswordGenerator.py  prestadorManager.py  senhaService.py  usuarioManager.py  usuarioService.py
api_indicai/strategies/: dbStorageStrategy.py  listStorageStrategy.py  storageStrategy.py  storage_factory.py
api_indicai/utils/: criptografarSenha.py  validarLogin.py  validarSenha.py  (+1 more)
documentação/: indicai (Pattern).drawio  indicai(design pattern).drawio  readme
tests/: test_prestadorManager.py  test_usuarioManager.py
(+1 files in other folders)
