[tool.poetry]
name = "api-indicai"
version = "0.1.0"
description = ""
authors = ["Eduarda Donato <eduardaribeiro0202@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
